--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     "build:test": "npm run build && npm test",
     "build:watch": "npm run build -- --watch",
     "clean": "rm -rf tsconfig.tsbuildinfo test/support/ts/full-app/tsconfig.tsbuildinfo lib test/support/ts/full-app/lib",
-    "coverage": "c8 node --test test/*.js",
-    "coverage:ci": "c8 --reporter lcovonly node --test test/*.js",
+    "coverage": "c8 node --test",
+    "coverage:ci": "c8 --reporter lcovonly node --test",
     "lint": "eslint \"test/*.js\" \"test/support/js/**/*.js\" \"test/support/ts/**/src/**/*.ts\" \"src/**/*.ts\" \"src/*.ts\"",
     "lint:fix": "npm run lint -- --fix",
     "prepublishOnly": "npm run build",
     "publish:minor": "npm version minor && npm publish",
     "publish:patch": "npm version patch && npm publish",
-    "test": "node --test test/*.js"
+    "test": "node --test"
   },
   "exports": "./lib/core.js",
   "types": "./lib/core.d.ts",
@@ -73,7 +73,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "nodemon": "^3.0.0",
     "prettier": "^3.0.0",
-    "tap": "^16.3.0",
+    "tap": "^18.0.0",
     "typescript": "^5.2.0"
   },
   "engines": {
