--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,8 @@ jobs:
       - name: npm run build
         run: npm run build
       - name: npm test
-        run: npm test
+        run: npm run test
+        if: matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest'
+      - name: npm test (windows)
+        run: npm run test:windows
+        if: matrix.os == 'windows-latest'
