--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,8 @@ jobs:
         run: npm i
       - name: npm run build
         run: npm run build
-      - name: npm test
-        run: npm run test (unix)
+      - name: npm test (unix)
+        run: npm run test
         if: matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest'
       - name: npm test (windows)
         run: npm run test:windows
