--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     "build:test": "npm run build && npm test",
     "build:watch": "npm run build -- --watch",
     "clean": "rm -rf tsconfig.tsbuildinfo test/support/ts/full-app/tsconfig.tsbuildinfo lib test/support/ts/full-app/lib",
-    "coverage": "c8 tap --disable-coverage --allow-empty-coverage test/*.js",
-    "coverage:ci": "c8 --reporter lcovonly tap --disable-coverage --allow-empty-coverage test/*.js",
+    "coverage": "c8 tap --disable-coverage --allow-empty-coverage test/*.js test/*.ts",
+    "coverage:ci": "c8 --reporter lcovonly tap --disable-coverage --allow-empty-coverage test/*.js test/*.ts",
     "lint": "eslint \"test/*.js\" \"test/support/js/**/*.js\" \"test/support/ts/**/src/**/*.ts\" \"src/**/*.ts\" \"src/*.ts\"",
     "lint:fix": "npm run lint -- --fix",
     "prepublishOnly": "npm run build",
     "publish:minor": "npm version minor && npm publish",
     "publish:patch": "npm version patch && npm publish",
-    "test": "tap --disable-coverage --allow-empty-coverage test/*.js"
+    "test": "tap --disable-coverage --allow-empty-coverage test/*.js test/*.ts"
   },
   "exports": "./lib/core.js",
   "types": "./lib/core.d.ts",
