--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     "build:test": "npm run build && npm test",
     "build:watch": "npm run build -- --watch",
     "clean": "rm -rf tsconfig.tsbuildinfo test/support/ts/full-app/tsconfig.tsbuildinfo lib test/support/ts/full-app/lib",
-    "coverage": "c8 tap --disable-coverage --allow-empty-coverage test/*.js",
-    "coverage:ci": "c8 --reporter lcovonly tap --disable-coverage --allow-empty-coverage test/*.js",
+    "coverage": "c8 tap --disable-coverage --allow-empty-coverage test/*.js test/*.ts",
+    "coverage:ci": "c8 --reporter lcovonly tap --disable-coverage --allow-empty-coverage test/*.js test/*.ts",
     "lint": "eslint \"test/*.js\" \"test/support/js/**/*.js\" \"test/support/ts/**/src/**/*.ts\" \"src/**/*.ts\" \"src/*.ts\"",
     "lint:fix": "npm run lint -- --fix",
     "prepublishOnly": "npm run build",
     "publish:minor": "npm version minor && npm publish",
     "publish:patch": "npm version patch && npm publish",
-    "test": "tap --disable-coverage --allow-empty-coverage test/*.js"
+    "test": "tap --disable-coverage --allow-empty-coverage test/*.js test/*.ts"
   },
   "exports": "./lib/core.js",
   "types": "./lib/core.d.ts",
@@ -58,8 +58,8 @@
     "@types/mime-types": "^2.1.0",
     "@types/node": "^20.0.0",
     "@types/nopt": "^3.0.29",
+    "@types/react": "^18.2.37",
     "@types/stack-utils": "^2.0.1",
-    "@types/tap": "^15.0.7",
     "@types/tough-cookie": "^4.0.2",
     "@types/ws": "^8.5.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
