--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,5 +1,5 @@
 name: coverage
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 jobs:
   coveralls:
     runs-on: ubuntu-latest
