remove obvious comments from eslint.config.js and apply prettier

--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "clean": "rm -rf tsconfig.tsbuildinfo test/support/ts/full-app/tsconfig.tsbuildinfo lib test/support/ts/full-app/lib",
     "coverage": "c8 tap --disable-coverage --allow-empty-coverage test/*.js test/*.ts",
     "coverage:ci": "c8 --reporter lcovonly tap --disable-coverage --allow-empty-coverage test/*.js test/*.ts",
-    "prelint": "prettier --check \"{src,test}/**/*.{js,ts}\"",
-    "prelint:fix": "prettier --write \"{src,test}/**/*.{js,ts}\"",
+    "prelint": "prettier --check \"{src,test}/**/*.{js,ts}\" eslint.config.js",
+    "prelint:fix": "prettier --write \"{src,test}/**/*.{js,ts}\" eslint.config.js",
     "lint": "eslint \"test/*.js\" \"test/support/js/**/*.js\" \"test/support/ts/**/src/**/*.ts\" \"src/**/*.ts\" \"src/*.ts\"",
     "lint:fix": "npm run lint -- --fix",
     "prepublishOnly": "npm run build",
